toolchain/internal/core/analysis/testdata/errors/duplicates/type_const_same_name.vdl
// format:off
// @expect: E804

type Limits {
  max int
}

const limits = 10
